--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url:                 https://goodboy-kr.github.io
 baseurl:             ""
 
 # A very short description of your page
-tagline:             "lim chang min is babo"
+tagline:             "lim chang min is babo mung cheong e"
 
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
